--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My webpage</title>
+    <title>This is my github hosted website.</title>
   </head>
   <body>
-
+    <h1>Hello world</h1>
   </body>
 </html>
