--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>This is my github hosted website.</title>
+    <script src="js/cookies.js" charset="utf-8"></script>
+    <script src="js/main.js" charset="utf-8"></script>
   </head>
   <body>
     <h1>Hello world</h1>
+
   </body>
 </html>
