--- a/index.html
+++ b/index.html
@@ -3,11 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>This is my github hosted website.</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
     <script src="js/cookies.js" charset="utf-8"></script>
-    <script src="js/main.js" charset="utf-8"></script>
+
   </head>
   <body>
-    <h1>Hello world</h1>
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 text-center">
+
+        <h1>Hello world</h1>
+        <input type="text" id="fname">
+        <button id="button">submit</button>
+        <br><br>
+        <input type="text" id="test">
+
+      </div>
+
+    </div>
+  </div>
+    <script src="js/main.js" charset="utf-8"></script>
 
   </body>
 </html>
