--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <h1>Hello world</h1>
         <input type="text" id="fname">
-        <button id="button">submit</button>
+        <button id="button">$250</button>
         <br><br>
         <input type="text" id="test">
 
